# ebsd-utils

./: .gitignore  .numba_config.yaml  CLA.md  README.md  channelling.py  channelling_run.py  clustering.py  config.ini  config.py  ebsd.py  ebsd_analyse.py  ebsd_grab.py  ebsd_map.py  ebsd_misorientation.py  ebsd_summarise.py  field.py  field_manager.py  fileloader.py  geometry.py  main.py  map.py  map_manager.py  material.py  materials.py  materials_add.py  orientation.py  parameter_groups.py  phase.py  progress_bar.py  pyproject.toml  scan.py  scan_analyse.py  scan_test.py  test.py  transforms.py  utilities.py
.cache/phase/: 271402  310619  40850  4294967294  4294967294.json  4294967295  60696
archived_code/: ebsd.py  fileloader.py  ipf.py
data/ebsd/: 2204261549.csv  2204261724.csv  2205031344.csv  2205101926.csv
data/phase/: 271402.json  310619.json  40850.json  4294967294.json  4294967295.json  60696.json
example_data/: k2205031525.csv  materials.csv
src/: aggregate.py  aggregate_manager.py  channelling.py  field.py  field_manager.py  geometry.py  map.py  map_manager.py  orientation.py  parameter_groups.py  phase.py  scan.py  utilities.py
src/algorithms/: channelling.py  clustering.py  field_transforms.py
src/data_structures/: aggregate.py  aggregate_manager.py  analysis.py  field.py  field_manager.py  map.py  map_manager.py  parameter_groups.py  phase.py
src/scripts/: add_phase.py  analyse.py  materials_add.py  test.py  test_analysis.py
src/utilities/: config.py  exception.py  filestore.py  geometry.py  orientation.py  (+2 more)
tests/: test_analysis.py
(+5 files in other folders)
