[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ebsd-utils"
version = "1.0b4"
description = "Utilities for processing EBSD data"
readme = "README.md"
requires-python = ">= 3.12"
license = {file = "LICENSE"}
authors = [
    {name = "Dr O.J. Whiteside", email = "o.j.whiteside@surrey.ac.uk"},
    {name = "Dr G. Hobler", email = "gerhard.hobler@tuwien.ac.at"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: GPU :: NVIDIA CUDA",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "numpy",
    "scipy",
    "numba",
    "pillow",
]

[project.urls]
"Repository" = "https://github.com/james-whiteside/ebsd-utils"
"Thesis" = "https://doi.org/10.15126/thesis.901043"